syntax = "proto3";
package auth;

option go_package = "github.com/RESERPIX/auth_service/internal/pb/";

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
  string full_name = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  string user_id = 1;
  string message = 2;
}

message LoginRequest {
  string login = 1;    // email или телефон
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  uint64 expires_in = 2; // опционально добавишь на сервере
}
